--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <p>learn more >>></p>
                         </div>
                         <div class="case-study-right">
-                            <img src="Media/koreanimation header.png">
+                            <img src="Media/STS AVM Files/1699324025660.jpg">
                             <div class="case-study-text">
                                 <h3>NYU Classroom AVM User Guides</h3>
                                 <p>I designed the audio visual media user guides for over 60+ classrooms and event spaces within NYU Steinhardt. <br/><br/>During my time at Steinhardt Technology Services, I intitiated and led a project focused on enhancing the UX/UI design of our guides to ensure a more intuitive and user-friendly experience for faculty and staff.</p>
