--- a/pages/about.html
+++ b/pages/about.html
@@ -36,7 +36,7 @@
                     <div class="about-top-right">
                         <h2>CONTACT INFO</h2>
                         <br/>   
-                        <h4><b>megankim@nyu.edu</b></h4>
+                        <h4><b>megkim.gy@gmail.com</b></h4>
                         <br/>  
                         <div class="about-links">
                             <a href="https://www.linkedin.com/in/megan-kim-6a332b17a/" target="_blank">LinkedIn</a>
