2/6/25 Updated portfolio w mockup designs

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img src="Media/Logo.png" class="logo">
         <div class="logo-bg-animation2"></div>
         <div class="logo-bg-animation"></div>
-        <p style="max-width: 90vw;">I specialize in <b>design/motion graphics/illustration</b> and I strive to <br/>bridge the intersection between humans and technology through design. <br/><br/> /* This website was entirely made using HTML/CSS */</p>
+        <p style="max-width: 90vw;">I specialize in <b>design and technology</b> and I strive to bridge the intersection <br/>between humans and technology through meaningful design. <br/><br/> /* This website was entirely made using HTML/CSS */</p>
     </div>
     <div class="scrollable-container">
             <span id="work-section" class="sections work-section">
@@ -68,7 +68,7 @@
                     </div>
                 </a>
                 <br/><br/><br/>
-                <a href="pages/koreanimation.html">
+                <a href="pages/steinhardt-technology-services.html">
                     <div class="case-study-container">
                         <div class="case-study-top">
                             <div class="circle-detail"></div>
