--- a/index.html
+++ b/index.html
@@ -148,7 +148,43 @@
                 <h1>LOGOS</h1>
                 <div class="card-container">
                     <div class=" image-card">
-                        <h3 style="width: 25vw;">NYU Motorsports Logo</h3>
+                        <h3 style="width: 40vw;">Koreanimation Logo</h3>
+                        <img src="Media/koreanimation header.png"/>
+                    </div>
+                    <div class="image-card">
+                        <img src=""/>
+                    </div>
+                    <div class="image-card">
+                        <img src="Media/Koreanimation Media/koreanimation thumbnail.png"/>
+                    </div>
+                </div>
+                <br/><br/>
+                <div class="card-container">
+                    <div class=" image-card">
+                        <h3 style="width: 50vw;">Steinhardt Technology Services color + flat logo</h3>
+                        <img src="Media/STS logo - 1.png"/>
+                    </div>
+                    <div class="image-card">
+                        <img src="Media/STS logo flat.jpeg" style="margin-left: 10vw"/>
+                    </div>
+                    <div class="image-card">
+                        <img src=""/>
+                    </div>
+                </div>
+                <br/><br/>
+                <div class="card-container">
+                    <div class=" image-card">
+                        <h3 style="width: 100vw;">NYU Motorsports 2024 Logo + Banner</h3>
+                        <img src="Media/motorsports_logo_1.jpg"/>
+                    </div>
+                    <div class="image-card" style="width: 30vw;">
+                        <img src="Media/NYU MOTORSPORTS.png"/>
+                    </div>
+                </div>
+                <br/><br/>
+                <div class="card-container">
+                    <div class=" image-card">
+                        <h3 style="width: 100vw;">NYU Motorsports 2023 Final Logo + other drafts</h3>
                         <img src="Media/des_logo_1.png"/>
                     </div>
                     <div class=" image-card">
@@ -161,7 +197,22 @@
                 <br/><br/><br/><br/><br/><br/><br/>
                 <h1>GRAPHIC DESIGN</h1><br/><br/>
                 <div class="card-container">
+                    <div class="image-card">
+                        <h3>Shirt Design</h3>
+                        <img src="Media/Shirt Front.PNG"/>
+                    </div>
                     <div class=" long-image-card">
+                        <h3>Instagram Story Highlight</h3>
+                        <img src="Media/Screenshot 2025-02-25 195750.png"/>
+                    </div>
+                    <div class=" long-image-card">
+                        <h3>Cover</h3>
+                        <img src="Media/COVER.png"/>
+                    </div>
+                </div>
+                <br/><br/>
+                <div class="card-container">
+                    <div class="image-card">
                         <h3>Shirt Design</h3>
                         <img src="Media/des_graphic_1.jpg"/>
                     </div>
