tried adding lottie animation - needs debugging

--- a/index.html
+++ b/index.html
@@ -24,10 +24,18 @@
         <a href="pages/about.html">About Me</a>
     </div>
     <div id="home" class="about-section">
-        <h2>hi! i'm</h2>
+        <div id="logo-lottie-animation"></div>
+
+        <!-- Scripts -->
+        <script src="scripts/lottie.js"></script>
+        <script src="scripts/index.js"></script>
+
+        <!-- Old animation (delete later)
+         <h2>hi! i'm</h2>
         <img src="Media/Logo.png" class="logo">
         <div class="logo-bg-animation2"></div>
         <div class="logo-bg-animation"></div>
+    -->
         <p style="max-width: 90vw;">I specialize in <b>design and technology</b> and I strive to bridge the intersection <br/>between humans and technology through meaningful design. <br/><br/> /* This website was entirely made using HTML/CSS */</p>
     </div>
     <div class="scrollable-container">
