--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <div id="logo-lottie-animation"></div>
 
         <!-- Scripts -->
-        <script src="scripts/lottie.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js" type="text/javascript"></script>
+        <!-- <script src="scripts/lottie.js"></script> -->
         <script src="scripts/index.js"></script>
 
         <!-- Old animation (delete later)
