--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2:wght@400;500;600;700;800&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="white-border"></div>
+    <!-- White border around the screen -->
+    <div class="white-border"></div> 
+    <!-- Navigation header bar -->
     <a href="#home" class="nav-logo">MEGAN KIM</a>
     <div class="nav ">
         <a href="#work-section">Work</a>
@@ -24,20 +26,19 @@
         <a href="pages/about.html">About Me</a>
     </div>
     <div id="home" class="about-section">
-        <div id="logo-lottie-animation"></div>
-
-        <!-- Scripts -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js" type="text/javascript"></script>
-        <!-- <script src="scripts/lottie.js"></script> -->
-        <script src="scripts/index.js"></script>
-
-        <!-- Old animation (delete later)
-         <h2>hi! i'm</h2>
-        <img src="Media/Logo.png" class="logo">
+        <h2>hi! i'm</h2>
+        <div class="spacer"></div>
+        <!-- Blue background animation -->
         <div class="logo-bg-animation2"></div>
         <div class="logo-bg-animation"></div>
-    -->
-        <p style="max-width: 90vw;">I specialize in <b>design and technology</b> and I strive to bridge the intersection <br/>between humans and technology through meaningful design. <br/><br/> /* This website was entirely made using HTML/CSS */</p>
+        <div id="logo-lottie-animation"class="logo"></div>
+        <!-- Scripts -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js" type="text/javascript"></script>
+        <script src="scripts/index.js"></script>
+        
+        <p>I know tech can be tricky; let me make it friendlier (and prettier) for you!
+            <br/><br/><br/><br/> 
+            /* Website made with HTML/CSS/JS */</p>
     </div>
     <div class="scrollable-container">
             <span id="work-section" class="sections work-section">
