changed short bio, working on case study reformatting

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='logo_animation.css'>
+    <script src="https://kit.fontawesome.com/622878c676.js" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2:wght@400;500;600;700;800&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -36,37 +38,38 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js" type="text/javascript"></script>
         <script src="scripts/index.js"></script>
         
-        <p>I know tech can be tricky; let me make it friendlier (and prettier) for you!
+        <p>I've got Adobe, a cold brew, and a dream
             <br/><br/><br/><br/> 
-            /* Website made with HTML/CSS/JS */</p>
+            /* Website made with AfterEffects/Illustrator, HTML/CSS/JS */</p>
     </div>
     <div class="scrollable-container">
             <span id="work-section" class="sections work-section">
                 <h1>WORK</h1>
                 <br/><br/><br/>
-                <a href="pages/dibby.html">
-                    <div class="case-study-container">
-                        <div class="case-study-top">
-                            <div class="circle-detail"></div>
-                            <div class="circle-detail"></div>
-                            <p>learn more >>></p>
-                        </div>
-                        <div class="case-study-right">
-                            <img style="background-color: #4B0872;" src="Media/Dibby Media/Dibby Logo.png">
-                            <div class="case-study-text">
-                                <h3>Dibby</h3>
-                                <p>Our team won the 1st place and audience favorite awards at the 2023 Hack Dibner competition. <br/><br/> We went through rounds of surveys, user interviews, ideation, prototyping, and testing to create Dibby: a friendly AI chatbot that streamlines the printing experience for all students and staff at Dibner Library.</p>
+                <div class="case-study-container">
+                    <img src="Media/Dibby Media/Dibby thumbnail.png">
+                    <a href="pages/dibby.html">
+                        <div class="case-study-popup">
+                            <div class="case-study-top">
+                                <div class="circle-detail"></div>
+                                <div class="circle-detail"></div>
+                                <p>learn more</p>
+                                <i class="fa-solid fa-arrow-up-right-from-square fa-bounce"></i>
                             </div>
+                                <div class="case-study-text">
+                                    <h3>Dibby</h3>
+                                    <p>Our team won the 1st place and audience favorite awards at the 2023 Hack Dibner competition. <br/><br/> We went through rounds of surveys, user interviews, ideation, prototyping, and testing to create Dibby: a friendly AI chatbot that streamlines the printing experience for all students and staff at Dibner Library.</p>
+                                </div>
                         </div>
-                    </div>
-                </a>
-                <br/><br/><br/>
+                    </a>
+                    <br/><br/><br/>
+                </div>
                 <a href="pages/koreanimation.html">
-                    <div class="case-study-container">
+                    <div class="case-study-popup">
                         <div class="case-study-top">
                             <div class="circle-detail"></div>
                             <div class="circle-detail"></div>
-                            <p>learn more >>></p>
+                            <p>learn more</p>
                         </div>
                         <div class="case-study-right">
                             <img src="Media/Koreanimation Media/koreanimation thumbnail.png">
@@ -79,7 +82,7 @@
                 </a>
                 <br/><br/><br/>
                 <a href="pages/steinhardt-technology-services.html">
-                    <div class="case-study-container">
+                    <div class="case-study-popup">
                         <div class="case-study-top">
                             <div class="circle-detail"></div>
                             <div class="circle-detail"></div>
