--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                 <h1>WORK</h1>
                 <br/><br/><br/>
                 <div class="case-study-container">
-                    <img src="Media/Dibby Media/Dibby thumbnail.png">
+                    <img src="Media/Dibby Media/Dibby thumbnail.png" style="margin-right: 100px;">
                     <div class="case-study-description">
                         <a href="pages/dibby.html">
-                            <div class="case-study-popup" style="float: right;">
+                            <div class="case-study-popup" style="float: right; margin: 0px 0px 10px 20px;">
                                 <div class="case-study-top" style="background-color: var(--blue);">
                                     <div class="circle-detail"></div>
                                     <div class="circle-detail"></div>
@@ -61,46 +61,59 @@
                                 <h2>dibby</h2>
                             </div>
                         </a>
-                        <br/>
-                        <p>Our team won the 1st place and audience favorite awards at the 2023 Hack Dibner competition. 
+                        <br/><br/><br/>
+                        <p>My team won the 1st place award and the audience favorite award at the 2023 Hack Dibner competition. 
                             <br/><br/> We went through rounds of surveys, user interviews, ideation, prototyping, and testing 
                             to create Dibby: a friendly AI chatbot that streamlines the printing experience for all students 
                             and staff at Dibner Library.</p>
                     </div>
                 </div>
-                <a href="pages/koreanimation.html">
-                    <div class="case-study-popup">
-                        <div class="case-study-top">
-                            <div class="circle-detail"></div>
-                            <div class="circle-detail"></div>
-                            <p>learn more</p>
-                        </div>
-                        <div class="case-study-right">
-                            <img src="Media/Koreanimation Media/koreanimation thumbnail.png">
-                            <div class="case-study-text">
-                                <h3>Koreanimation</h3>
-                                <p>I'm crafting an interactive and educational website to simplify the Korean alphabet for all ages. <br/><br/>This project aims to intersect technology, education, and South Korean culture, offering a fun and entertaining way to explore the beauty of the Korean language through studied traditional patterns and elements.</p>
+
+                <div class="case-study-container">
+                    <div class="case-study-description">
+                        <a href="pages/steinhardt-technology-services.html">
+                            <div class="case-study-popup" style="float: left; margin: 0px 20px 10px 0px;">
+                                <div class="case-study-top" style="background-color: var(--blue);">
+                                    <div class="circle-detail"></div>
+                                    <div class="circle-detail"></div>
+                                    <p>learn more</p>
+                                    <i class="fa-solid fa-arrow-up-right-from-square fa-bounce"></i>
+                                </div>
+                                <h2>AV User Guides</h2>
                             </div>
-                        </div>
+                        </a>
+                        <br/><br/><br/>
+                        <p>I designed the audio visual media user guides for over 60+ classrooms and event spaces within 
+                            NYU Steinhardt. <br/><br/>During my time at Steinhardt Technology Services, I intitiated and 
+                            led a project focused on enhancing the UX/UI design of our guides to ensure a more intuitive 
+                            and user-friendly experience for faculty and staff.</p>
                     </div>
-                </a>
-                <br/><br/><br/>
-                <a href="pages/steinhardt-technology-services.html">
-                    <div class="case-study-popup">
-                        <div class="case-study-top">
-                            <div class="circle-detail"></div>
-                            <div class="circle-detail"></div>
-                            <p>learn more >>></p>
-                        </div>
-                        <div class="case-study-right">
-                            <img src="Media/STS AVM Files/1699324025660.jpg">
-                            <div class="case-study-text">
-                                <h3>NYU Classroom AVM User Guides</h3>
-                                <p>I designed the audio visual media user guides for over 60+ classrooms and event spaces within NYU Steinhardt. <br/><br/>During my time at Steinhardt Technology Services, I intitiated and led a project focused on enhancing the UX/UI design of our guides to ensure a more intuitive and user-friendly experience for faculty and staff.</p>
+                    <img src="Media/STS AVM Files/1699324025660.jpg" style="margin-left: 100px;">
+                </div>
+
+                <div class="case-study-container">
+                    <img src="Media/Koreanimation Media/koreanimation thumbnail.png" style="margin-right: 100px;">
+                    <div class="case-study-description">
+                        <a href="pages/koreanimation.html">
+                            <div class="case-study-popup" style="float: right; margin: 0px 0px 10px 20px;">
+                                <div class="case-study-top" style="background-color: var(--blue);">
+                                    <div class="circle-detail"></div>
+                                    <div class="circle-detail"></div>
+                                    <p>learn more</p>
+                                    <i class="fa-solid fa-arrow-up-right-from-square fa-bounce"></i>
+                                </div>
+                                <h2>korea<br/>nimation</h2>
                             </div>
-                        </div>
+                        </a>
+                        <br/><br/><br/>
+                        <p>I'm crafting an interactive and educational website to simplify the Korean alphabet for all ages. 
+                            <br/><br/>
+                            This project aims to intersect technology, education, and South Korean culture, offering a fun and 
+                            entertaining way to explore the beauty of the Korean language through studied traditional patterns 
+                            and elements.</p>
                     </div>
-                </a>
+                </div>
+
             </span>
             <span id="mot-graph-section" class="sections mot-graph-section">
                 <h1>MOTION GRAPHICS</h1>
