fixed about me page bugs, changed syntax

--- a/index.html
+++ b/index.html
@@ -19,12 +19,9 @@
     <div class="white-border"></div> 
     <!-- Navigation header bar -->
     <a href="#home" class="nav-logo">megan kim</a>
-    <div class="nav ">
+    <div class="nav">
         <a href="#work-section">Work</a>
-        <a href="#mot-graph-section">Motion Graphics</a>
-        <a href="#design-section">Design</a>
-        <a href="#modeling-section">3D Modeling</a>
-
+        <a href="#mot-graph-section">Other</a>
         <a href="pages/about.html">About Me</a>
     </div>
     <div id="home" class="about-section">
@@ -70,8 +67,8 @@
                             to create Dibby: a friendly AI chatbot that streamlines the printing experience for all students 
                             and staff at Dibner Library.</p>
                         <a href="pages/dibby.html">
-                            <div class="case-study-popup">
-                                <div class="case-study-top">
+                            <div class="button-popup">
+                                <div class="button-popup-top">
                                     <div class="circle-detail"></div>
                                     <div class="circle-detail"></div>
                                     <div class="circle-detail"></div>
@@ -96,8 +93,8 @@
                             led a project focused on enhancing the UX/UI design of our guides to ensure a more intuitive 
                             and user-friendly experience for faculty and staff.</p>
                             <a href="pages/steinhardt-technology-services.html">
-                                <div class="case-study-popup">
-                                    <div class="case-study-top">
+                                <div class="button-popup">
+                                    <div class="button-popup-top">
                                         <div class="circle-detail"></div>
                                         <div class="circle-detail"></div>
                                         <div class="circle-detail"></div>
@@ -126,8 +123,8 @@
                             entertaining way to explore the beauty of the Korean language through studied traditional patterns 
                             and elements.</p>
                             <a href="pages/koreanimation.html">
-                                <div class="case-study-popup">
-                                    <div class="case-study-top">
+                                <div class="button-popup">
+                                    <div class="button-popup-top">
                                         <div class="circle-detail"></div>
                                         <div class="circle-detail"></div>
                                         <div class="circle-detail"></div>
