--- a/pages/about.html
+++ b/pages/about.html
@@ -5,32 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Megan Kim</title>
     <link rel='stylesheet' type='text/css' media='screen' href='../main.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='selected.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../styles.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='aboutme.css'>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2:wght@400;500;600;700;800&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="white-border"></div>
-    <a href="../index.html" class="nav-logo">MEGAN KIM</a>
+    <!-- White border around the screen -->
+    <div class="white-border"></div> 
+    <!-- Navigation header bar -->
+    <a href="../index.html" class="nav-logo">megan kim</a>
     <div class="nav">
         <a href="../index.html#work-section">Work</a>
-        <a href="../index.html#mot-graph-section">Motion Graphics</a>
-        <a href="../index.html#design-section">Design</a>
-        <a href="../index.html#modeling-section">3D Modeling</a>
+        <a href="../index.html#mot-graph-section">Other</a>
         <a href="about.html">About Me</a>
     </div>
-    <span class="content" style="background-color: var(--dblue);">
-        <div class="about case-study-container">
-            <a href="../index.html">
-                <div class="case-study-top">
+    <span class="content">
+        <a href="javascript:history.back()">
+            <div class="button-popup">
+                <div class="button-popup-top">
                     <div class="circle-detail"></div>
                     <div class="circle-detail"></div>
-                    <p><<< back</p>
+                    <div class="circle-detail"></div>
                 </div>
-            </a>
-            <div class="about-container case-study">
+                < go back
+            </div>
+        </a>
+        <div class="about">
+            <div class="about-container">
                 <div class="about-top">
                     <img class="headshot" src="../Media/Headshot.JPG">
                     <div class="about-top-right">
@@ -49,6 +53,7 @@
                 </p>
                 <br/>  <br/>  
         </div>
+    </div>
     </span>
 </body>
 </html>
