fixed some sizing

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </div>
         <div class="bot-half-section">
             <p>I've got Adobe, a cold brew, and a dream
-                <br/><br/>
-            /* Website made with AfterEffects/Illustrator, HTML/CSS/JS */</p>
+                <br/>
+            /* Website made with Adobe AfterEffects/Illustrator, HTML/CSS/JS */</p>
         </div>
     </div>
     <div class="scrollable-container">
