fixed about me page

--- a/pages/about.html
+++ b/pages/about.html
@@ -30,7 +30,7 @@
                     <div class="circle-detail"></div>
                     <div class="circle-detail"></div>
                 </div>
-                < go back
+                < back
             </div>
         </a>
         <div class="about">
@@ -49,8 +49,18 @@
                     </div>
                 </div>
                 <br/>
+                <p>Hi there! I'm Megan, a lively designer with a keen eye for the smallest details, and always looking
+                    for a streamlined--and entertaining--experience for others. Whether that's in producing shortform videos,
+                    creating fun animations, or using funky textures in Adobe, I want to bring my creative lens
+                    to support my team members and positively impact my users.
+                    <br/><br/>
+                    On days I'm not straining my eyes on my screen... you can find me cafe hopping or experimenting with new coffee syrup
+                    flavors. (Ask me about my banana bread pudding syrup!)
+                </p>
+                <!-- 
                 <p>My passion is learning the intersection between humans and technology through user-friendly design. <br/><br/>My experience as the Director of Operations at New York University’s Motorsports Program has allowed me to not only improve audience response and engagement from rebranding but also foster a meaningful and cross-functional community of engineers. I believe that the culture and passion of a dynamic team are reflected in the products they create, enhancing not only efficiency but also the satisfaction of the team itself. 
                 </p>
+                 -->
                 <br/>  <br/>  
         </div>
     </div>
