fixed some formatting on main page

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                                 title="YouTube video player" 
                                 frameborder="0" 
                                 allowfullscreen="true"
-                                style="margin-right: 100px;">Your device does not support embedded Youtube videos.</iframe>
-                                <p style="text-align: center; margin-right: 100px;">Trailer designed & animated by me!</p>
+                                style="margin-right: 50px;">Your device does not support embedded Youtube videos.</iframe>
+                                <p style="text-align: center; margin-right: 50px;">Trailer designed & animated by me!</p>
                     </div>
                     <div class="case-study-description">
                         <h2>Dibby</h2>
@@ -60,11 +60,11 @@
                             <div class="tag">PRODUCT DESIGN</div>
                             <div class="tag">MOTION GRAPHICS</div>
                             <div class="tag">UX/UI</div>
-                            <div class="tag">MANAGEMENT</div>
+                            <div class="tag">PROJECT MANAGEMENT</div>
                         </div>
-                        <p>My team won the 1st place award and the audience favorite award at the 2023 Hack Dibner competition. 
-                            <br/><br/> We went through rounds of surveys, user interviews, ideation, prototyping, and testing 
-                            to create Dibby: a friendly AI chatbot that streamlines the printing experience for all students 
+                        <p>My team won 1st place and the Audience Favorite award at the 2023 Hack Dibner competition. 
+                            <br/><br/> We conducted surveys, user interviews, ideation, prototyping, and testing 
+                            to create Dibby: a friendly AI chatbot that streamlines the printing experience for students 
                             and staff at Dibner Library.</p>
                         <a href="pages/dibby.html">
                             <div class="button-popup">
@@ -104,11 +104,11 @@
                                 </div>
                             </a>
                     </div>
-                    <img src="Media/STS AVM Files/1699324025660.jpg" style="margin-left: 100px;">
+                    <img src="Media/STS AVM Files/1699324025660.jpg" style="margin-left: 50px;">
                 </div>
 
                 <div class="case-study-container">
-                    <img src="Media/Koreanimation Media/koreanimation thumbnail.png" style="margin-right: 100px;">
+                    <img src="Media/Koreanimation Media/koreanimation thumbnail.png" style="margin-right: 50px;">
                     <div class="case-study-description">
                         <h2>koreanimation</h2>
                         <div class="tags">
