made a WIP page for placeholders, changed link to koreanimation website

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             NYU Steinhardt. <br/><br/>During my time at Steinhardt Technology Services, I intitiated and 
                             led a project focused on enhancing the UX/UI design of our guides to ensure a more intuitive 
                             and user-friendly experience for faculty and staff.</p>
-                            <a href="pages/steinhardt-technology-services.html">
+                            <a href="pages/wip.html">
                                 <div class="button-popup">
                                     <div class="button-popup-top">
                                         <div class="circle-detail"></div>
@@ -122,7 +122,7 @@
                             This project aims to intersect technology, education, and South Korean culture, offering a fun and 
                             entertaining way to explore the beauty of the Korean language through studied traditional patterns 
                             and elements.</p>
-                            <a href="pages/koreanimation.html">
+                            <a href="https://koreanimation.xyz/" target="_blank">
                                 <div class="button-popup">
                                     <div class="button-popup-top">
                                         <div class="circle-detail"></div>
